[project]
name = "serial-port-change"
version = "1.0.3"
authors = [
    {name = "David Walker", email = 'dbwalker0min@gmail.com'},
]
description = "Monitor the serial ports in Windows and detect and display changes"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
serial_port_change = "serial_port_change:monitor_serial_ports"
